yaml/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: expressjs
spec:
  ports:
  - name: http
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: expressjs
  sessionAffinity: None
  type: ClusterIP
