yaml/ingress-inlets.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: expressjs-inlets-ingress
  labels:
    app: expressjs-inlets-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.global-static-ip-name: expressjs
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
  namespace: default
spec:
  rules:
  - host: express.example.com
    http:
      paths:
      - backend:
          serviceName: expressjs
          servicePort: 8080
  - host: expresswithtls.example.com
    http:
      paths:
      - backend:
          serviceName: expressjs
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - expresswithtls.example.com
    secretName: letsencrypt
