yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  creationTimestamp: null
  generation: 1
  labels:
    app: expressjs
  name: expressjs
spec:
  rules:
  - host: express.example.com
    http:
      paths:
      - backend:
          serviceName: expressjs
          servicePort: 4000
        path: /
